# AptifyBot

./: LICENSE  README.md  pyproject.toml
AptifyBot/: AptifyBot.py
