[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AptifyBot"
version = "1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "The best Discord Selfbot (With a Twist!)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OfficialCJDesigns"
